# flutter-proto-plugin

./: .prototools  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: channel.rs  config.rs  lib.rs  proto.rs  release_response.rs
tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/snapshots/: shims_test__flutter_tool__creates_shims.snap
