[package]
name = "flutter_tool"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
  { file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = "1.3.0"
proto_pdk = "0.25.5"
schematic = "0.17.8"
serde = "1.0.217"
yaml-rust2 = "0.9.0"

[dev-dependencies]
proto_pdk_test_utils = "0.31.0"
starbase_sandbox = "0.8.1"
tokio = "1.43.0"

[features]
default = ["wasm"]
wasm = []
